Arrival rate improvement